[gd_scene load_steps=5 format=3 uid="uid://b6sldv7wkulby"]

[ext_resource type="Script" uid="uid://bdo1hbivbrq8h" path="res://quiz/end_quiz.gd" id="1_amf4w"]
[ext_resource type="Theme" uid="uid://b518a15p4qy0m" path="res://assets/UI/pc_components.tres" id="2_e32wp"]
[ext_resource type="ButtonGroup" uid="uid://ugpr4nutnptu" path="res://evidence/image_type.tres" id="3_hxbvm"]
[ext_resource type="PackedScene" uid="uid://c0wglcbgod0a4" path="res://dialogue/helper.tscn" id="3_x16n5"]

[node name="quiz" type="Node2D"]
script = ExtResource("1_amf4w")

[node name="question" type="Label" parent="."]
offset_right = 256.0
offset_bottom = 23.0
theme = ExtResource("2_e32wp")
theme_override_colors/font_color = Color(0.932108, 0.863368, 0.766723, 1)
theme_override_font_sizes/font_size = 8
text = "this is a question on the tool used etc"
autowrap_mode = 2

[node name="helper" parent="." instance=ExtResource("3_x16n5")]
visible = false

[node name="answers" type="VBoxContainer" parent="."]
offset_top = 32.0
offset_right = 61.0
offset_bottom = 112.0

[node name="a" type="CheckBox" parent="answers"]
layout_mode = 2
theme = ExtResource("2_e32wp")
button_group = ExtResource("3_hxbvm")
text = "a) yes"
flat = true

[node name="b" type="CheckBox" parent="answers"]
layout_mode = 2
theme = ExtResource("2_e32wp")
button_group = ExtResource("3_hxbvm")
text = "b) no"
flat = true

[node name="c" type="CheckBox" parent="answers"]
layout_mode = 2
theme = ExtResource("2_e32wp")
button_group = ExtResource("3_hxbvm")
text = "c) maybe"
flat = true

[node name="exit" type="Button" parent="answers"]
visible = false
layout_mode = 2
text = "finish"

[connection signal="pressed" from="answers/a" to="." method="_on_a_pressed"]
[connection signal="pressed" from="answers/b" to="." method="_on_b_pressed"]
[connection signal="pressed" from="answers/c" to="." method="_on_c_pressed"]
[connection signal="pressed" from="answers/exit" to="." method="_on_exit_pressed"]
